# napi

./: Cargo.toml  Makefile  cliff.toml  deny.toml  index.d.ts
algo/: Cargo.toml
algo/src/: algo.rs  bitmap.rs  lib.rs  matrix.rs  vector.rs
napi-example/: Cargo.toml  index.d.ts  index.js  package.json
napi-example/src/: algo.rs  lib.rs  matrix.rs
python-binding/: Cargo.toml  README.md  pyproject.toml
python-binding/python/algo/: __init__.py
python-binding/src/: bitmap.rs  hasher.rs  lib.rs  matrix.rs
src/: lib.rs
